--- a/CursoGit/css/estilos.css
+++ b/CursoGit/css/estilos.css
@@ -3,3 +3,15 @@ body {
     font-family: 'Arial';
     color: aqua;
 }
+
+#container {
+    width: 70%;
+    padding: 1rem;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1 {
+    font-size: 20px;
+}
