--- a/CursoGit/css/estilos.css
+++ b/CursoGit/css/estilos.css
@@ -4,6 +4,20 @@ body {
     color: aqua;
 }
 
+#cabecera {
+    background: blueviolet;
+    color: white;
+    margin: 0;
+    padding: 0.5rem;
+    font-weight: bold;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1rem;
+    font-weight: normal;
+    font-size: 0.1rem;
+}
 #container {
     width: 70%;
     padding: 1rem;
