--- a/CursoGit/css/estilos.css
+++ b/CursoGit/css/estilos.css
@@ -1,7 +1,10 @@
 body {
+    background: #1e1f24;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: aqua;
+    margin: 0;
+    padding: 0;
 }
 
 #cabecera {
@@ -11,6 +14,11 @@ body {
     padding: 0.5rem;
     font-weight: bold;
     box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline {
@@ -28,4 +36,9 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    background: white;
+    padding: 1rem;
 }
