--- a/CursoDjango/instagram/templates/users/update_profile.html
+++ b/CursoDjango/instagram/templates/users/update_profile.html
@@ -35,6 +35,9 @@
 						</p>
 					</div>
 				</div>
+				<div class="invalid-feedback">
+					{% for error in form.picture.errors%} {{ error }} {%endfor%}
+				</div>
 
 				<hr />
 				<br />
@@ -42,19 +45,32 @@
 				<div class="form-group">
 					<label>Website</label>
 					<input
-						class="form-control"
+						class="form-control {% if form.website.errors %} is-invalid {% endif %}"
 						type="url"
 						name="website"
 						placeholder="Website"
-						value="{{ profile.website }}"
+						value="{% if form.errors %} {{ form.website.value }} {% else %} {{ profile.website }}{% endif %}"
 					/>
+					<div class="invalid-feedback">
+						{% for error in form.website.errors%} {{ error }} {%endfor%}
+					</div>
 				</div>
 
 				<div class="form-group">
 					<label>Biography</label>
-					<textarea class="form-control" name="biography">
-{{ profile.biography }}</textarea
+					<textarea
+						class="form-control {% if form.biography.errors %} is-invalid {% endif %}"
+						name="biography"
 					>
+          {% if form.errors %} 
+            {{ form.biography.value }} 
+          {% else %} 
+            {{ profile.biography }}
+          {% endif %}
+          </textarea>
+					<div class="invalid-feedback">
+						{% for error in form.biography.errors%} {{ error }} {%endfor%}
+					</div>
 				</div>
 
 				<div class="form-group">
@@ -66,6 +82,9 @@
 						placeholder="Phone number"
 						value="{{ profile.phone_number }}"
 					/>
+					<div class="invalid-feedback">
+						{% for error in form.phone_number.errors%} {{ error }} {%endfor%}
+					</div>
 				</div>
 
 				<button type="submit" class="btn btn-primary btn-block mt-5">
