[Add] Pagination and template views

--- a/CursoDjango/instagram/templates/users/login.html
+++ b/CursoDjango/instagram/templates/users/login.html
@@ -18,5 +18,5 @@
 
     </form>
 
-    <p class="mt-4">Dont have an account yet?<a href="{% url "signup" %}">Sigup here</a></p>
+    <p class="mt-4">Dont have an account yet?<a href="{% url "users:signup" %}">Sigup here</a></p>
 {% endblock %}
