--- a/CursoDjango/instagram/templates/nav.html
+++ b/CursoDjango/instagram/templates/nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="main-navbar">
     <div class="container">
 
-        <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="{% url "feed" %}">
+        <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="{% url "posts:feed" %}">
             <img src="{% static "img/instagram.png" %}" height="45" class="d-inline-block align-top"/>
         </a>
 
@@ -10,8 +10,11 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
+                    
                     {% if request.user.profile.picture %}
+                    <a href="{% url "users:detail" request.user.username %}">
                         <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
+                    </a>    
                     {% else %}
                     <a href="">
                         <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
@@ -20,13 +23,13 @@
                 </li>
 
                 <li class="nav-item nav-icon">
-                    <a href="{% url "create_post" %}">
+                    <a href="{% url "posts:create" %}">
                         <i class="fas fa-plus"></i>
                     </a>
                 </li>
 
                 <li class="nav-item nav-icon">
-                    <a href="{% url "logout" %}">
+                    <a href="{% url "users:logout" %}">
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
                 </li>
